# hiring-buddy

./: .gitignore  README.md  SMART_EVALUATION_README.md  app.py  enhanced_evaluation.py  env.example  main.py  pyproject.toml  smart_evaluation.py  test_portia_calendar.py
agents/: __init__.py  candidate_evaluator_agent.py  github_agent.py  job_parser_agent.py  llm_resume_parser.py  planner_agent.py  resume_agent.py  scheduler_agent.py
templates/: index.html
tools/: __init__.py  ai_evaluator.py  assessment_generator.py  candidate_tracker.py  code_analyzer.py  email_templates.py  github_scanner.py  job_matcher.py  repository_analyzer.py  resume_parser.py  skill_matcher.py  skills_extractor.py  tools.py
utils/: __init__.py  cli.py  schemas.py
